added readme to magnet example

--- a/Notebooks/ODE Example 1.ipynb
+++ b/Notebooks/ODE Example 1.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -39,17 +39,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Runge-Kutta, steps:  7540 time:  1.7455060482025146\n",
-      "Forward Euler, steps:  7540 time:  0.34956789016723633\n"
+      "Runge-Kutta, steps:  7540 time:  1.734687089920044\n",
+      "Forward Euler, steps:  7540 time:  0.33908510208129883\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x10a271668>"
+       "<matplotlib.legend.Legend at 0x108e19f28>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -460,7 +460,7 @@
        "+jQAAAAASUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10a1ed160>"
+       "<matplotlib.figure.Figure at 0x10938be48>"
       ]
      },
      "metadata": {},
