--- a/Notebooks/ODE Example 4.ipynb
+++ b/Notebooks/ODE Example 4.ipynb
@@ -181,7 +181,8 @@
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -877,6 +878,33 @@
     "ax[1].set_xlabel('Tolerance')\n",
     "ax[1].set_ylabel('Steps')\n",
     "ax[1].legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  1.00000000e-03   6.81292069e-04   4.64158883e-04   3.16227766e-04\n",
+      "   2.15443469e-04   1.46779927e-04   1.00000000e-04   6.81292069e-05\n",
+      "   4.64158883e-05   3.16227766e-05   2.15443469e-05   1.46779927e-05\n",
+      "   1.00000000e-05   6.81292069e-06   4.64158883e-06   3.16227766e-06\n",
+      "   2.15443469e-06   1.46779927e-06   1.00000000e-06   6.81292069e-07\n",
+      "   4.64158883e-07   3.16227766e-07   2.15443469e-07   1.46779927e-07\n",
+      "   1.00000000e-07   6.81292069e-08   4.64158883e-08   3.16227766e-08\n",
+      "   2.15443469e-08   1.46779927e-08   1.00000000e-08]\n"
+     ]
+    }
+   ],
+   "source": [
+    "tolerances = np.logspace(-3, -8, 31)\n",
+    "print(tolerances)"
    ]
   },
   {
