--- a/Notebooks/ODE Example 6.ipynb
+++ b/Notebooks/ODE Example 6.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -1301,7 +1301,7 @@
        "xgAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x112ee00b8>"
+       "<matplotlib.figure.Figure at 0x1140fec50>"
       ]
      },
      "metadata": {},
@@ -1313,7 +1313,6 @@
     "\n",
     "def B(t, x):\n",
     "    return np.sin(0.1*x[0])*np.sin(0.1*x[1])*np.array([0., 0., 1.])\n",
-    "    #return np.array([0., 0., 1.])\n",
     "\n",
     "def f(t, y, z):\n",
     "    return z\n",
@@ -1397,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -1405,10 +1404,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x112f5def0>"
+       "<matplotlib.legend.Legend at 0x1140e7b38>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1738,7 +1737,7 @@
        "KEnK/weBitu4xBdigQAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x112f5df60>"
+       "<matplotlib.figure.Figure at 0x1140e7a20>"
       ]
      },
      "metadata": {},
