--- a/Notebooks/Linear Algebra - Iterative solvers.ipynb
+++ b/Notebooks/Linear Algebra - Iterative solvers.ipynb
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -740,12 +740,12 @@
      "output_type": "stream",
      "text": [
       "Solving with BicGStab\n",
-      "Iterations without preconditioner:  50\n",
-      "Iterations with preconditioner:     21\n",
+      "Iterations without preconditioner:  38\n",
+      "Iterations with preconditioner:     15\n",
       "Are the two solutions close:  True\n",
       "solving with conjugate gradient\n",
-      "Iterations without preconditioner:  43\n",
-      "Iterations with preconditioner:     30\n",
+      "Iterations without preconditioner:  54\n",
+      "Iterations with preconditioner:     46\n",
       "Are the two solutions close:  True\n"
      ]
     }
@@ -773,14 +773,14 @@
     "## BicGSstab ##\n",
     "print('Solving with BicGStab')\n",
     "i = 0\n",
-    "x,  info = linalg.bicgstab(A, b, x0, tol = 1e-15, callback = f)\n",
+    "x,  info = linalg.bicgstab(A, b, x0, tol = 1e-9, callback = f)\n",
     "print('Iterations without preconditioner: ', i)\n",
     "i = 0\n",
     "# bicgstab takes preconditioner as argument and applies it\n",
-    "xp, info = linalg.bicgstab(A, b, x0, tol = 1e-15, callback = f, M = P)\n",
+    "xp, info = linalg.bicgstab(A, b, x0, tol = 1e-9, callback = f, M = P)\n",
     "print('Iterations with preconditioner:    ', i)\n",
     "# Verify that the solutions are \"equal\"\n",
-    "print('Are the two solutions close: ', np.allclose(x, xp, rtol = 1e-6, atol = 1e-6))\n",
+    "print('Are the two solutions close: ', np.allclose(x, xp))\n",
     "\n",
     "## Conjugate gradient ##\n",
     "# Create preconditioned versions of A and b\n",
@@ -788,9 +788,9 @@
     "bp = np.dot(M, b)\n",
     "\n",
     "print('solving with conjugate gradient')\n",
-    "x,  res   = cg(A,  b,  x0, tol = 1e-6)\n",
+    "x,  res   = cg(A,  b,  x0, tol = 1e-9)\n",
     "print('Iterations without preconditioner: ', len(res))\n",
-    "xp, res_P = cg(Ap, bp, x0, tol = 1e-6)\n",
+    "xp, res_P = cg(Ap, bp, x0, tol = 1e-9)\n",
     "print('Iterations with preconditioner:    ', len(res_P))\n",
     "print('Are the two solutions close: ', np.allclose(x, xp))"
    ]
