Some additions and corrections in Finite difference notebook

--- a/Notebooks/6 - Finite difference approximations.ipynb
+++ b/Notebooks/6 - Finite difference approximations.ipynb
@@ -67,7 +67,7 @@
     "\n",
     "# Find the derivative in some point, and plot the tangent line\n",
     "x1 = 2\n",
-    "dx = 1\n",
+    "dx = 1 # Large stepsize to illustrate, reduce to improve accuracy\n",
     "w = 2\n",
     "df1 = (f(x1+dx) - f(x1))/dx\n",
     "plt.plot([x1-w, x1+w], [f(x1)-w*df1, f(x1)+w*df1], '--', c = 'k', label = f'Approximate slope at x = x1')\n",
@@ -88,9 +88,9 @@
     "\n",
     "Do a series expansion of $f(x)$ about the point $x + \\Delta x$:\n",
     "\n",
-    "$$ f(x + \\Delta x) = f(x) + \\Delta(x) f'(x) + \\mathcal{O}(\\Delta x^2) $$\n",
+    "$$ f(x + \\Delta x) = f(x) + \\Delta x f'(x) + \\mathcal{O}(\\Delta x^2) $$\n",
     "\n",
-    "$$ \\Rightarrow f'(x) = \\frac{f(x + \\Delta x) - f(x)}{\\Delta(x)} + \\mathcal{O}(\\Delta x) $$\n",
+    "$$ \\Rightarrow f'(x) = \\frac{f(x + \\Delta x) - f(x)}{\\Delta x} + \\mathcal{O}(\\Delta x) $$\n",
     "\n",
     "The error is proportional to $\\Delta x$, hence this is called a first-order approximation (of the first derivative)."
    ]
@@ -156,7 +156,12 @@
     "$$ \\left. \\frac{\\mathrm{d} f(x)}{\\mathrm{d} x} \\right|_{x} \\approx \\frac{f(x) - f(x - \\Delta x)}{\\Delta x}. $$\n",
     "\n",
     "Central:\n",
-    "$$ \\left. \\frac{\\mathrm{d} f(x)}{\\mathrm{d} x} \\right|_{x} \\approx \\frac{f(x+\\Delta x/2) - f(x - \\Delta x / 2)}{\\Delta x}. $$"
+    "$$ \\left. \\frac{\\mathrm{d} f(x)}{\\mathrm{d} x} \\right|_{x} \\approx \\frac{f(x+\\Delta x/2) - f(x - \\Delta x / 2)}{\\Delta x}. $$\n",
+    "\n",
+    "Note that if you want to use central finite difference to calculate the derivative of a function when you only now the value at discrete points with spacing $\\Delta x$, then you don't know the values at the half-points. Hence, you modify the formula slightly:\n",
+    "\n",
+    "Central, when half-points are unknown:\n",
+    "$$ \\left. \\frac{\\mathrm{d} f(x)}{\\mathrm{d} x} \\right|_{x} \\approx \\frac{f(x+\\Delta x) - f(x - \\Delta x)}{2\\Delta x}. $$\n"
    ]
   },
   {
@@ -190,7 +195,7 @@
     "\n",
     "# Find the derivative in some point, and plot the tangent line\n",
     "x1 = 2\n",
-    "dx = 0.5\n",
+    "dx = 0.5 # Using a relatively large spacing, so that the difference is visible\n",
     "w = 2\n",
     "\n",
     "# Forward\n",
@@ -379,7 +384,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A brief sympy example"
+    "## A brief sympy example\n",
+    "\n",
+    "See https://www.sympy.org for more information"
    ]
   },
   {
@@ -410,6 +417,7 @@
     "f = a*log(b*x + sin(x))*exp(c*x)\n",
     "\n",
     "# Calculate the first derivative with respect to x\n",
+    "# Change the number 1 to calculate higher derivatives\n",
     "diff(f, x, 1)"
    ]
   },
