updated notebook on useful python features

--- a/Notebooks/00 - Some python features that may (or may not) be convenient to know about.ipynb
+++ b/Notebooks/00 - Some python features that may (or may not) be convenient to know about.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -111,18 +111,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A random number: -1261.093\n",
-      "A random number:    26.874\n",
-      "A random number:  2543.489\n",
-      "A random number: -1566.385\n",
-      "A random number:    67.060\n"
+      "A random number:   802.396\n",
+      "A random number:   127.508\n",
+      "A random number:  -375.913\n",
+      "A random number:  -162.518\n",
+      "A random number:   783.088\n"
      ]
     }
    ],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 'hei']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create a list (note the square brackets)\n",
+    "A = [1, 2, 'hello']\n",
+    "\n",
+    "# Change one of the elements in the list\n",
+    "A[2] = 'hei'\n",
+    "\n",
+    "print(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +304,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-41-747bde60663d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mA\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'hello'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mA\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'hei'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-12-61b14d10dc35>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# This line will give an error, because you cannot modify a tuple\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mA\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'hei'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
      ]
     }
@@ -289,36 +312,13 @@
    "source": [
     "A = (1, 2, 'hello')\n",
     "\n",
+    "# This line will give an error, because you cannot modify a tuple\n",
     "A[2] = 'hei'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 'hei']"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "A = [1, 2, 'hello']\n",
-    "\n",
-    "A[2] = 'hei'\n",
-    "\n",
-    "A"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -327,13 +327,18 @@
        "True"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "collision1 = (0.01, 1 , 4)\n",
+    "# Tuples are sorted by their first element.\n",
+    "# Again using Exercise 1 as an example, that makes\n",
+    "# tuples one way (of several) to store collisions\n",
+    "# on the heap queue, as long as you put the time\n",
+    "# at which the collision happens in the first element.\n",
+    "collision1 = (0.01,  1, 4)\n",
     "collision2 = (0.003, 2, 3)\n",
     "\n",
     "collision2 < collision1"
@@ -348,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -453,15 +458,26 @@
        "(4, 9)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = (2,  3)\n",
+    "# Tuple unpacking can also be used\n",
+    "# when passing arguments to a function:\n",
     "\n",
-    "f(*a)"
+    "def f(x, y):\n",
+    "    return 2*x, y**2\n",
+    "\n",
+    "a = (2, 3)\n",
+    "\n",
+    "# *a unpacks the tuple, splitting it into two arguments\n",
+    "f(*a)\n",
+    "\n",
+    "# Just calling f(a) will give an error,\n",
+    "# because f expects two arguments, not one.\n",
+    "#f(a)"
    ]
   },
   {
@@ -474,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,16 +611,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f8cecb22370>]"
+       "[<matplotlib.lines.Line2D at 0x7f9cb339b130>]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -639,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,14 +695,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The function <function f at 0x7f8ced3b6700> has been called 308 times. This has taken 0.00103 seconds\n"
+      "The function <function f at 0x7f9cb3ba11f0> has been called 308 times. This has taken 0.00078 seconds\n"
      ]
     },
     {
@@ -744,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +895,7 @@
      "output_type": "stream",
      "text": [
       "('total',)\n",
-      "45\n"
+      "6\n"
      ]
     }
    ],
@@ -893,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -924,14 +940,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The function <function f at 0x7f8ced604af0> has been called 308 times. This has taken 0.00086 seconds\n"
+      "The function <function f at 0x7f9cb3c20940> has been called 308 times. This has taken 0.00081 seconds\n"
      ]
     },
     {
@@ -989,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1030,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1055,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1064,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1073,7 +1089,7 @@
        "<AxesSubplot:xlabel='Timestep'>"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1098,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1107,7 +1123,7 @@
        "<AxesSubplot:xlabel='Timestep'>"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1147,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1205,14 +1221,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10000000/10000000 [00:02<00:00, 3339766.87it/s]\n"
+      "100%|██████████| 10000000/10000000 [00:02<00:00, 3583176.42it/s]\n"
      ]
     }
    ],
@@ -1227,14 +1243,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000000/1000000 [00:00<00:00, 2616793.56it/s]\n"
+      "100%|██████████| 1000000/1000000 [00:00<00:00, 3198199.26it/s]\n"
      ]
     }
    ],
@@ -1260,7 +1276,7 @@
     "\n",
     "It can be very convenient to have your program accept arguments from the command line, so you don't have to change the program in order to change, e.g., numerical parameters.\n",
     "\n",
-    "See examples in ```../scripts/commandline_arguments.py```"
+    "It's hard to demonstrate command line arguments in a notebook, so see examples in ```../scripts/commandline_arguments.py```"
    ]
   },
   {
