Updates to Notebook 10, iterative methods, preconditioners

--- a/Notebooks/04 - Some tips for efficient code in Python.ipynb
+++ b/Notebooks/04 - Some tips for efficient code in Python.ipynb
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,23 +424,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating the set took 0.63115 seconds\n"
+      "Calculating the set took 0.84034 seconds\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7ffae2c1d610>"
+       "<matplotlib.collections.QuadMesh at 0x7f9afa9831f0>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,13 +505,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8a62cd3d02b446d7a80b6596281ca01b",
+       "model_id": "dd4f4563b2ef42a18f4a85b309c7064f",
        "version_major": 2,
        "version_minor": 0
       },
