--- a/Notebooks/05 - A short introduction to Monte Carlo methods.ipynb
+++ b/Notebooks/05 - A short introduction to Monte Carlo methods.ipynb
@@ -39,7 +39,7 @@
     "Suppose that $\\{X_1, X_2, \\ldots, X_N\\}$ are independent samples from some probability distribution, $p$, with mean $\\mu$ and variance $\\sigma^2 < \\infty$. Then $\\mu_N = \\frac{1}{N}\\sum_{i=1}^N X_i$ is called the *sample mean*. If you draw $N$ samples several times, then $\\mu_N$ will generally have a different value each time, such that $\\mu_N$ is essentially a random variable. According to the *strong law of large numbers*, $\\mu_N \\to \\mu$ as $N \\to \\infty$, almost surely. (\"Almost surely\" is a technical term that means \"with probability 1\". It basically means that you can construct counterexamples, but they have zero probability of occuring. For example, if you roll a 6-sided die $N$ times, then the average value will approach 3.5 with probability 1 as $N \\to \\infty$. You could imagine throwing a 6 every time, but the probability of this goes to 0 as $N \\to \\infty$.)\n",
     "\n",
     "\n",
-    "Furthermore, we have that the error in the sample mean is given by $E_N = \\mu - \\mu_N$, where $\\mu$ is the *true* mean of the distribution (which will often be unknown). Then the Lindeberg-Lévy CLT say that the distribution of the error, $E_N$ in the sample mean is given by\n",
+    "Furthermore, we have that the error in the sample mean is given by $E_N = \\mu - \\mu_N$, where $\\mu$ is the *true* mean of the distribution (which will often be unknown). Then the Lindeberg-Lévy CLT says that the distribution of the error, $E_N$ in the sample mean is given by\n",
     "\n",
     "$$ E_N \\sim  \\frac{1}{\\sqrt{N}} \\mathcal{N}(0, \\sigma^2), $$\n",
     "\n",
