--- a/Notebooks/10 - Linear Algebra.ipynb
+++ b/Notebooks/10 - Linear Algebra.ipynb
@@ -59,14 +59,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.61 µs ± 110 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
-      "63.4 µs ± 1.36 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "6.16 µs ± 454 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
+      "59.6 µs ± 843 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
      "execution_count": 2,
